@@ -58,7 +58,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.8.2"
+       version="2.8.3"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
